# WhiteoutTex

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE-AI.md  LICENSE.md  README.md  THIRD_PARTY.md  format.bat
src/: app.cpp  app.h  batch_convert.cpp  batch_convert.h  casc_browser.cpp  casc_browser.h  cli_main.cpp  common_types.h  image_details.cpp  image_details.h  image_viewer.cpp  image_viewer.h  main.cpp  preferences.cpp  preferences.h  save_dialog.cpp  save_dialog.h  save_helpers.cpp  save_helpers.h  texture_converter.cpp  texture_converter.h  thread_pool_manager.cpp  thread_pool_manager.h  upscaler.cpp  upscaler.h
src/models/: app_state.h  commands.h
src/services/: batch_service.cpp  batch_service.h  casc_service.cpp  casc_service.h  texture_service.cpp  texture_service.h  upscaler_service.cpp  upscaler_service.h
src/views/: batch_convert.cpp  batch_convert.h  casc_browser.cpp  casc_browser.h  dialogs.cpp  dialogs.h  image_details.cpp  image_details.h  image_viewer.cpp  image_viewer.h  menu_bar.cpp  menu_bar.h  save_dialog.cpp  save_dialog.h  save_helpers.cpp  save_helpers.h
